# centijson

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  codecov.yml
.github/workflows/: ci-build.yml
scripts/: coverity.sh
src/: CMakeLists.txt  json-dom.c  json-dom.h  json-ptr.c  json-ptr.h  json.c  json.h  value.c  value.h
tests/: CMakeLists.txt  test-json.c
utils/: CMakeLists.txt  json-err.c  json-err.h  json-parse.c
